# codechat

./: .gitignore  AGENT_COMPARISON.md  AGENT_V2_DESIGN.md  AGENT_V2_USAGE.md  CLI_USAGE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  quick_test.py  requirements.txt
codechat/: __init__.py  __main__.py  agent.py  agent_v2.py  ast_chunker.py  chunker.py  cli.py  config.py  rag.py  scanner.py  skills.py  store.py
examples/: agent_v2_demo.py
tests/: test_agent_v2.py  test_scanner.py
